--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.0",
     "autoprefixer": "10.4.14",
     "chart.js": "^4.2.1",
+    "daisyui": "^2.51.6",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "leaflet": "^1.9.3",
