--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
     "react-table": "^7.8.0",
     "tailwindcss": "3.3.1",
