--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "daisyui": "^2.51.6",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "geolib": "^3.3.3",
+    "isomorphic-unfetch": "^4.0.2",
     "leaflet": "^1.9.3",
     "next": "13.3.1",
     "postcss": "8.4.23",
